--- a/src/main/resources/props/default.props
+++ b/src/main/resources/props/default.props
@@ -44,11 +44,13 @@ photo.urlbase=http://images.vilarika.com.br/
 
 #---------------------------
 tissxml.path=/var/www/html/tissxml/
-tissxml.urlbase=http://nb.vilarika.com.br/tissxml/
+#tissxml.urlbase=http://nb.vilarika.com.br/tissxml/
+tissxml.urlbase=http://tissxml.vilarika.com.br/
 
 #---------------------------
 remessa.path=/var/www/html/remessa/
-remessa.urlbase=http://nb.vilarika.com.br/remessa/
+#remessa.urlbase=http://nb.vilarika.com.br/remessa/
+remessa.urlbase=http://remessa.vilarika.com.br/
 
 #boleto
 payment.cedenteNome=Vila Rika Solucoes Ltda - ME
