company logo upload fix

--- a/src/main/resources/props/default.props
+++ b/src/main/resources/props/default.props
@@ -43,7 +43,7 @@ photo.path=/var/www/html/images/
 #--só vale local, local acessa local ou acessa web
 #--web só acessa web
 #-- p cessar imagens locais http-server em /var/www/html
-photo.local=false
+photo.local=true
 #---------------
 #tentei nao deu certo
 #photo.urlbase=https://images.gerirme.app/
